--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
                 <thead><tr><th>Lớp</th><th>Dải địa chỉ đầu</th><th>Subnet Mask Mặc định</th><th>Mục đích sử dụng</th></tr></thead>
                 <tbody>
                     <tr><td>A</td><td>1.0.0.0 – 126.255.255.255</td><td>255.0.0.0 (/8)</td><td>Các mạng rất lớn, ISP</td></tr>
-                    <tr><td>B</td><td>128.0.0.0 – 191.255.255.255</td><td>255.255.0.0 (/16)</td><td>Các mạngขนาดกลางถึงใหญ่</td></tr>
+                    <tr><td>B</td><td>128.0.0.0 – 191.255.255.255</td><td>255.255.0.0 (/16)</td><td>Các mạng trung bình đến lớn</td></tr>
                     <tr><td>C</td><td>192.0.0.0 – 223.255.255.255</td><td>255.255.255.0 (/24)</td><td>Các mạng nhỏ, mạng gia đình, doanh nghiệp nhỏ</td></tr>
                     <tr><td>D</td><td>224.0.0.0 – 239.255.255.255</td><td>N/A</td><td>Multicast (gửi đến một nhóm)</td></tr>
                     <tr><td>E</td><td>240.0.0.0 – 255.255.255.255</td><td>N/A</td><td>Dự trữ, nghiên cứu (Experimental)</td></tr>
